--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 project (Argon)
-add_executable (Argon "Argon.cpp" "Lexer.cpp" "Lexer.h" "Token.cpp" "Token.h" "Parser.cpp" "Parser.h" "Node.cpp" "Node.h")
+add_subdirectory ("src/")
