--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,9 @@
 cmake_minimum_required (VERSION 3.10)
-add_executable (Argon "Argon.cpp" "Lexer.cpp" "Lexer.h" "Token.cpp" "Token.h" "Parser.cpp" "Parser.h" "Node.cpp" "Node.h")
+add_executable (Argon
+	"Argon.cpp"
+	"Lexer.cpp" "Lexer.h"
+	"Token.cpp" "Token.h"
+	"Parser.cpp" "Parser.h"
+	"Node.cpp" "Node.h"
+	"Value.cpp" "Value.h"
+	"Evaluator.cpp" "Evaluator.h")
