feat: allow _ to make numbers more readable, check integer size

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable (Argon
 	"Node.cpp" "Node.h"
 	"Value.cpp" "Value.h"
 	"Evaluator.cpp" "Evaluator.h"
-	"Facts.cpp" "Facts.h")
+	"Facts.cpp" "Facts.h"
+	"Util.cpp" "Util.h")
