style: handle headers differently in cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,8 @@
 cmake_minimum_required (VERSION 3.10)
+include_directories(${CMAKE_CURRENT_LIST_DIR})
 add_executable (Argon
-	"Argon.cpp"
-	"Lexer.cpp" "Lexer.h"
-	"Token.cpp" "Token.h"
-	"Parser.cpp" "Parser.h"
-	"Node.cpp" "Node.h"
-	"Value.cpp" "Value.h"
-	"Evaluator.cpp" "Evaluator.h"
-	"Facts.cpp" "Facts.h"
-	"Util.cpp" "Util.h")
+	"Argon.cpp" "Lexer.cpp"
+	"Token.cpp" "Parser.cpp"
+	"Node.cpp" "Value.cpp" 
+	"Evaluator.cpp" "Facts.cpp"
+	"Util.cpp")
